--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
    <meta property="og:locale" content="en_IN" />
    <meta property="og:description" content="Create your personal link page" />
 
-   <link rel="shortcut icon" type="image/x-icon" href="https://static.iamone.link/icons/favicon.ico" />
+   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
    <link rel="icon" type="image/png" sizes="32x32" href="https://static.iamone.link/icons/favicon-32x32.png" />
    <link rel="icon" type="image/png" sizes="16x16" href="https://static.iamone.link/icons/favicon-16x16.png" />
 
