--- a/public/index.html
+++ b/public/index.html
@@ -18,21 +18,21 @@
    <meta property="og:site_name" content="iamone" />
    <meta property="og:type" content="website" />
    <meta property="og:url" content="https://iamone.link" />
-   <meta property="og:image" content="https://static.iamone.link/images/open-graph-thumb.png" />
+   <meta property="og:image" content="https://rajatxs.github.io/iamone-static/images/open-graph-thumb.png" />
    <meta property="og:locale" content="en_IN" />
    <meta property="og:description" content="Create your personal link page" />
 
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-   <link rel="icon" type="image/png" sizes="32x32" href="https://static.iamone.link/icons/favicon-32x32.png" />
-   <link rel="icon" type="image/png" sizes="16x16" href="https://static.iamone.link/icons/favicon-16x16.png" />
+   <link rel="icon" type="image/png" sizes="32x32" href="https://rajatxs.github.io/iamone-static/icons/favicon-32x32.png" />
+   <link rel="icon" type="image/png" sizes="16x16" href="https://rajatxs.github.io/iamone-static/icons/favicon-16x16.png" />
 
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;700&display=swap" />
-   <link rel="stylesheet" href="https://static.iamone.link/css/vars.css" />
-   <link rel="stylesheet" href="https://static.iamone.link/css/master.css" />
-   <link rel="stylesheet" href="https://static.iamone.link/css/global.css" />
-   <link rel="stylesheet" href="https://static.iamone.link/css/site.css" />
+   <link rel="stylesheet" href="https://rajatxs.github.io/iamone-static/css/vars.css" />
+   <link rel="stylesheet" href="https://rajatxs.github.io/iamone-static/css/master.css" />
+   <link rel="stylesheet" href="https://rajatxs.github.io/iamone-static/css/global.css" />
+   <link rel="stylesheet" href="https://rajatxs.github.io/iamone-static/css/site.css" />
    <title>iamone - Create personal link page</title>
 </head>
 
@@ -40,7 +40,7 @@
    <header class="x-header">
       <div class="x-header-content xstack margin-x-auto h-inherit justify-space-between align-center">
          <div class="x-logo xstack align-center">
-            <img class="x-logo-image" src="https://static.iamone.link/icons/iamone.svg" alt="iamone" />
+            <img class="x-logo-image" src="https://rajatxs.github.io/iamone-static/icons/iamone.svg" alt="iamone" />
          </div>
          <nav class="x-navmenu xstack gap-medium text-center">
             <a href="#faq" class="x-navmenu-item">FAQ</a>
@@ -128,7 +128,7 @@
 
       <div class="x-core-feature-overview xstack justify-center align-center">
          <div class="x-core-feature-overview-image-wrapper">
-            <img src="https://static.iamone.link/images/themes.svg" width="240" class="x-core-feature-overview-image" alt="Amazing Themes" />
+            <img src="https://rajatxs.github.io/iamone-static/images/themes.svg" width="240" class="x-core-feature-overview-image" alt="Amazing Themes" />
          </div>
          <div class="x-core-feature-overview-detail">
             <h2>Amazing Themes</h2>
@@ -138,7 +138,7 @@
 
       <div class="x-core-feature-overview reverse xstack justify-center align-center">
          <div class="x-core-feature-overview-image-wrapper">
-            <img src="https://static.iamone.link/images/analytics.svg" width="380" class="x-core-feature-overview-image" alt="Visual Analytics" />
+            <img src="https://rajatxs.github.io/iamone-static/images/analytics.svg" width="380" class="x-core-feature-overview-image" alt="Visual Analytics" />
          </div>
          <div class="x-core-feature-overview-detail">
             <h2>Visual Analytics</h2>
@@ -179,7 +179,7 @@
 
    <footer class="x-footer xstack margin-x-auto justify-space-between pad-y-large">
       <div class="x-footer-logo xstack justify-center">
-         <img class="x-footer-logo-image" src="https://static.iamone.link/icons/iamone-gray.svg" />
+         <img class="x-footer-logo-image" src="https://rajatxs.github.io/iamone-static/icons/iamone-gray.svg" />
       </div>
 
       <div class="xstack justify-center gap-large">
